<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnEdadGrupo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:text="@string/btnEdadGrupo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLeer" />

    <Button
        android:id="@+id/btnHistoricoSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/btnGuardarHisto"
        app:layout_constraintBottom_toTopOf="@+id/btnHistoricoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHistoricoView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnVerHist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/IdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Idname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtNombre"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/IdName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/IfFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/IdFecha"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtNombre" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Interrogante"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IfFecha"
        app:layout_constraintTop_toBottomOf="@+id/editTxtNombre" />

    <TextView
        android:id="@+id/IdtxtModalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="21dp"
        android:text="@string/IdModalidad"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtModalidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IfFecha" />

    <TextView
        android:id="@+id/txtModalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/Interrogante"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/IdtxtModalidad"
        app:layout_constraintStart_toEndOf="@+id/IdtxtModalidad" />

    <TextView
        android:id="@+id/IdTxtCiclo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/IdCiclo"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtModalidad"
        app:layout_constraintEnd_toStartOf="@+id/txtCiclo"
        app:layout_constraintStart_toEndOf="@+id/txtModalidad" />

    <TextView
        android:id="@+id/txtCiclo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:hint="@string/Interrogante"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/IdTxtCiclo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IdTxtCiclo" />

    <Button
        android:id="@+id/btnLeer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnLeer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdtxtModalidad" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#C8C8C8"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHistoricoSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEdadGrupo" />
</androidx.constraintlayout.widget.ConstraintLayout>
